# Annoto

./: AGENTS.md  Cargo.toml  README.md  REFACTORING_SUMMARY.md  Trunk.toml  index.html  refactoring_plan.md
assets/: sw.js
src/: app.rs  drawing_tool.rs  history.rs  main.rs  touch_handler.rs
src/canvas_items/: arrow.rs  filled_rect.rs  line.rs  mod.rs  mosaic.rs  stroke_rect.rs  text.rs
src/drawing/: item_renderer.rs  mod.rs  preview_renderer.rs  shape_factory.rs
src/export/: download_handler.rs  image_exporter.rs  mod.rs
src/state/: drawing_state.rs  mod.rs  selection_state.rs  ui_state.rs
src/ui/: export_dialog.rs  mod.rs  side_panel.rs  top_panel.rs
